[package]
name = "ktowe-grss"
description = "A simple CLI"
version = "0.1.0"
authors = ["Kevin Towe"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
clap-verbosity-flag = "2.2.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
